Map isn't infinite anymore, restricted the bounds of visible area. fixed #3

--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -10,8 +10,8 @@ body,
 	padding: 0;
 }
 
-#mapid {
-	background: #58B;
+#mymap {
+	background: rgb(115,182,230);
 }
 
 #page-content{
